--- a/app/views/admin/total_loans.html.erb
+++ b/app/views/admin/total_loans.html.erb
@@ -42,29 +42,31 @@
               <div class="table-money-holder">
                 <table class="table table-striped table-money">
                   <tbody>
-                  <% @all_loan_app.each_with_index do |each_loan, index| %>
-                      <tr>
-                        <td class="text-center" width="4%"><%= index + 1 %></td>
-                        <td width="6%">
-                          <%= link_to loan_path(each_loan.id) do %>Details<% end %>
-                        </td>
-                        <td width="12%"><%= each_loan.created_at.to_date %></td>
-                        <td width="12%"><%= each_loan.amount %></td>
-                        <td width="12%"><span class="text-danger"><%= each_loan.status.upcase %></span></td>
-                        <td width="12%"><%= each_loan.finished_payment %></td>
-                        <td width="15%"><%= user_fullname(each_loan.guarantor_one_id) %></td>
-                        <td width="15%"><%= user_fullname(each_loan.guarantor_two_id) %></td>
-                        <td class="text-center" width="15%">
-                          <% if loan_approved?(each_loan.status, each_loan.guarantor_one_status, each_loan.guarantor_two_status)%>
-                            <%= link_to approve_loan_path(each_loan.id), class: "btn btn-success" do %>
-                              <i class="fa fa-plus"></i>
+                  <% unless @all_loan_app.blank? %>
+                    <% @all_loan_app.each_with_index do |each_loan, index| %>
+                        <tr>
+                          <td class="text-center" width="4%"><%= index + 1 %></td>
+                          <td width="6%">
+                            <%= link_to loan_path(each_loan.id) do %>Details<% end %>
+                          </td>
+                          <td width="12%"><%= each_loan.created_at.to_date %></td>
+                          <td width="12%"><%= each_loan.amount %></td>
+                          <td width="12%"><span class="text-danger"><%= each_loan.status.upcase %></span></td>
+                          <td width="12%"><%= each_loan.finished_payment %></td>
+                          <td width="15%"><%= user_fullname(each_loan.guarantor_one_id) %></td>
+                          <td width="15%"><%= user_fullname(each_loan.guarantor_two_id) %></td>
+                          <td class="text-center" width="15%">
+                            <% if loan_approved?(each_loan.status, each_loan.guarantor_one_status, each_loan.guarantor_two_status)%>
+                              <%= link_to approve_loan_path(each_loan.id), class: "btn btn-success" do %>
+                                <i class="fa fa-plus"></i>
+                              <% end %>
+                              <%= link_to decline_loan_path(each_loan.id), class: "btn btn-danger" do %>
+                                <i class="fa fa-trash"></i>
+                              <% end %>
                             <% end %>
-                            <%= link_to decline_loan_path(each_loan.id), class: "btn btn-danger" do %>
-                              <i class="fa fa-trash"></i>
-                            <% end %>
-                          <% end %>
-                        </td>
-                      </tr>
+                          </td>
+                        </tr>
+                    <% end %>
                   <% end %>
                   </tbody>
                 </table>
@@ -73,15 +75,15 @@
                 <thead>
                   <tr>
                     <th width="80%">Total Pending Approval</th>
-                    <th class="text-center" width="20%"><%= @total_pending_loan %></th>
+                    <th class="text-center" width="20%"><%= to_currency(@total_pending_loan) unless @total_pending_loan.blank? %></th>
                   </tr>
                   <tr>
                     <th width="80%">Total Approved</th>
-                    <th class="text-center" width="20%"><%= @total_approved_loan %></th>
+                    <th class="text-center" width="20%"><%= to_currency(@total_approved_loan) unless @total_approved_loan.blank? %></th>
                   </tr>
                   <tr>
                     <th width="80%">Total Declined</th>
-                    <th class="text-center" width="20%"><%= @total_declined_loan %></th>
+                    <th class="text-center" width="20%"><%= to_currency(@total_declined_loan) unless @total_declined_loan.blank? %></th>
                   </tr>
                 </thead>
               </table>
